--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/bzerangue/zerangue.org" class="button fork"><strong>View On GitHub</strong></a>
+        <!--<a href="https://github.com/bzerangue/zerangue.org" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
             <li><a href="https://github.com/bzerangue/zerangue.org/zipball/master" class="button">ZIP</a></li>
             <li><a href="https://github.com/bzerangue/zerangue.org/tarball/master" class="button">TAR</a></li>
           </ul>
-        </div>
+        </div>-->
+        
       </div><!-- end banner -->
 
     <div class="wrapper">
